--- a/AcsStatsWeb/ClientApp/src/app/modules/bowling-records/components/bowling-inn-by-inn/bowling-inn-by-inn.component.html
+++ b/AcsStatsWeb/ClientApp/src/app/modules/bowling-records/components/bowling-inn-by-inn/bowling-inn-by-inn.component.html
@@ -1,4 +1,4 @@
-<h2>Innings By Innings Figures</h2>
+<h2>Innings By Innings</h2>
 
 <h3>{{(bowlingSummary$ | async)?.team}} v {{(bowlingSummary$ | async)?.opponents}}
   at {{(bowlingSummary$ | async)?.ground}}
@@ -17,6 +17,10 @@
     <th class="text-left">
       <a (click)="sort(importedSortOrder.team)" class="btn btn-link text-left">Team
         <fa-icon *ngIf="importedSortOrder.team == sortOrder" [icon]="getSortClass(importedSortOrder.team)"></fa-icon></a>
+    </th>
+    <th class="text-left">
+      <a (click)="sort(importedSortOrder.opponents)" class="btn btn-link text-left">Opponents
+        <fa-icon *ngIf="importedSortOrder.opponents == sortOrder" [icon]="getSortClass(importedSortOrder.opponents)"></fa-icon></a>
     </th>
     <th class="text-right">
       <a (click)="sort(importedSortOrder.balls)" class="btn btn-link">Overs
@@ -48,10 +52,6 @@
     </th>
     <th class="minwidth15"></th>
     <th class="text-left">
-      <a (click)="sort(importedSortOrder.opponents)" class="btn btn-link text-left">Opponents
-        <fa-icon *ngIf="importedSortOrder.opponents == sortOrder" [icon]="getSortClass(importedSortOrder.opponents)"></fa-icon></a>
-    </th>
-    <th class="text-left">
       <a (click)="sort(importedSortOrder.ground)" class="btn btn-link text-left">Ground
         <fa-icon *ngIf="importedSortOrder.ground == sortOrder" [icon]="getSortClass(importedSortOrder.ground)"></fa-icon></a>
     </th>
@@ -62,9 +62,10 @@
   </tr>
   </thead>
   <tbody>
-  <tr *ngFor="let row of (bowlingInnByInn$ | async)?.data">
+  <tr *ngFor="let row of (bowlingInnByInn$ | async)?.sqlResults?.data">
     <td class="text-left" nowrap="nowrap">{{row.fullName}}</td>
     <td class="text-left" nowrap="nowrap">{{row.team}}</td>
+    <td class="text-left" nowrap="nowrap">{{row.opponents}}</td>
     <td class="text-right" nowrap="nowrap">{{getOvers(row)}}</td>
     <td class="text-right" nowrap="nowrap">{{row.ballsPerOver}}</td>
     <td class="text-right" nowrap="nowrap">{{row.playerMaidens == null || row.playerMaidens == 0 ? "-" : row.playerMaidens}}</td>
@@ -73,9 +74,12 @@
     <td class="text-right" nowrap="nowrap">{{row.econ}}</td>
     <td class="text-right" nowrap="nowrap">{{row.inningsNumber}}</td>
     <td></td>
-    <td class="text-left" nowrap="nowrap">{{row.opponents}}</td>
     <td class="text-left" nowrap="nowrap">{{row.ground}}</td>
     <td class="text-right" nowrap="nowrap">{{row.matchDate}}</td>
   </tr>
   </tbody>
 </table>
+
+<app-paging [pageSize]="pageSize" [totalItems]="count" [currentPage]="currentPage" (first)="navigate(0)"
+            (previous)="navigate($event)" (next)="navigate($event)" (last)="navigate($event)"
+            (goto)="navigate($event)"></app-paging>
