--- a/AcsStatsWeb/ClientApp/src/app/modules/bowling-records/components/bowling-overall/bowling-overall.component.html
+++ b/AcsStatsWeb/ClientApp/src/app/modules/bowling-records/components/bowling-overall/bowling-overall.component.html
@@ -14,8 +14,12 @@
       <a (click)="sort(importedSortOrder.name)" class="btn btn-link">Name
         <fa-icon *ngIf="importedSortOrder.name == sortOrder" [icon]="getSortClass(importedSortOrder.name)"></fa-icon></a>
     </th>
+    <th class="text-left">
+      <a (click)="sort(importedSortOrder.team)" class="btn btn-link">Team
+        <fa-icon *ngIf="importedSortOrder.team == sortOrder" [icon]="getSortClass(importedSortOrder.team)"></fa-icon></a>
+    </th>
     <th class="text-right">
-      <a (click)="sort(importedSortOrder.matches)" class="btn btn-link">M
+      <a (click)="sort(importedSortOrder.matches)" class="btn btn-link">Mt
         <fa-icon *ngIf="importedSortOrder.matches == sortOrder" [icon]="getSortClass(importedSortOrder.matches)"></fa-icon></a>
     </th>
     <th class="text-right">
@@ -23,19 +27,19 @@
         <fa-icon *ngIf="importedSortOrder.innings == sortOrder" [icon]="getSortClass(importedSortOrder.innings)"></fa-icon></a>
     </th>
     <th class="text-right">
-      <a (click)="sort(importedSortOrder.balls)" class="btn btn-link">Balls
+      <a (click)="sort(importedSortOrder.balls)" class="btn btn-link">B
         <fa-icon *ngIf="importedSortOrder.balls == sortOrder" [icon]="getSortClass(importedSortOrder.balls)"></fa-icon></a>
     </th>
     <th class="text-right">
-      <a (click)="sort(importedSortOrder.maidens)" class="btn btn-link">Maidens
+      <a (click)="sort(importedSortOrder.maidens)" class="btn btn-link">Md
         <fa-icon *ngIf="importedSortOrder.maidens == sortOrder" [icon]="getSortClass(importedSortOrder.maidens)"></fa-icon></a>
     </th>
     <th class="text-right">
-      <a (click)="sort(importedSortOrder.runs)" class="btn btn-link">Runs
+      <a (click)="sort(importedSortOrder.runs)" class="btn btn-link">R
         <fa-icon *ngIf="importedSortOrder.runs == sortOrder" [icon]="getSortClass(importedSortOrder.runs)"></fa-icon></a>
     </th>
     <th class="text-right">
-      <a (click)="sort(importedSortOrder.wickets)" class="btn btn-link">Wickets
+      <a (click)="sort(importedSortOrder.wickets)" class="btn btn-link">W
         <fa-icon *ngIf="importedSortOrder.wickets == sortOrder" [icon]="getSortClass(importedSortOrder.wickets)"></fa-icon></a>
     </th>
     <th class="text-right">
@@ -74,11 +78,18 @@
       <a (click)="sort(importedSortOrder.sixes)" class="btn btn-link">6s
         <fa-icon *ngIf="importedSortOrder.sixes == sortOrder" [icon]="getSortClass(importedSortOrder.sixes)"></fa-icon></a>
     </th>
+    <th class="text-right">
+      <a (click)="sort(importedSortOrder.battingImpact)" class="btn btn-link">BI
+        <fa-icon *ngIf="importedSortOrder.battingImpact == sortOrder"
+                 [icon]="getSortClass(importedSortOrder.battingImpact)"></fa-icon>
+      </a>
+    </th>
   </tr>
   </thead>
   <tbody>
-  <tr *ngFor="let row of (bowlingOverall$ | async)?.data">
+  <tr *ngFor="let row of (bowlingOverall$ | async)?.sqlResults?.data">
     <td class="text-left" nowrap="nowrap">{{row.name}}</td>
+    <td class="text-left" nowrap="nowrap">{{row.team}}</td>
     <td class="text-right" nowrap="nowrap">{{row.matches}}</td>
     <td class="text-right" nowrap="nowrap">{{row.innings == null ? "-" : row.innings}}</td>
     <td class="text-right" nowrap="nowrap">{{row.balls}}</td>
@@ -89,11 +100,16 @@
     <td class="text-right" nowrap="nowrap">{{getBb(row.bbiw, row.bbir)}}</td>
     <td class="text-right" nowrap="nowrap">{{getBb(row.bbmw, row.bbmr)}}</td>
     <td class="text-right" nowrap="nowrap">{{getEcon(row.runs, row.balls)}}</td>
-    <td class="text-right" nowrap="nowrap">{{getStrikeRate(row.wickets, row.balls)}}</td>
+    <td class="text-right" nowrap="nowrap">{{row.sr.toFixed(2)}}</td>
     <td class="text-right" nowrap="nowrap">{{row.fiveFor}}</td>
     <td class="text-right" nowrap="nowrap">{{row.tenFor}}</td>
     <td class="text-right" nowrap="nowrap">{{row.fours}}</td>
     <td class="text-right" nowrap="nowrap">{{row.sixes}}</td>
+    <td class="text-right" nowrap="nowrap">{{row.bi.toFixed(2)}}</td>
   </tr>
   </tbody>
 </table>
+
+<app-paging [pageSize]="pageSize" [totalItems]="count" [currentPage]="currentPage" (first)="navigate(0)"
+            (previous)="navigate($event)" (next)="navigate($event)" (last)="navigate($event)"
+            (goto)="navigate($event)"></app-paging>
