Added UI and code to disable screen and show spinner if HTTP request in progress

--- a/AcsStatsWeb/ClientApp/src/app/app.component.html
+++ b/AcsStatsWeb/ClientApp/src/app/app.component.html
@@ -1,3 +1,9 @@
+<div *ngIf="loading" class="loading-container flex flex-content-center">
+  <svg class="spinner" width="65px" height="65px" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+    <circle class="path" fill="none" stroke-width="6" stroke-linecap="round" cx="50" cy="50" r="45"></circle>
+  </svg>
+</div>
+
 <app-header></app-header>
 <app-nav-menu></app-nav-menu>
 <main role="main" class="pb-3">
