Updated the UI to show pop-ups for various items on the display

--- a/AcsStatsWeb/ClientApp/src/app/modules/batting-records/components/batting-overall/batting-overall.component.html
+++ b/AcsStatsWeb/ClientApp/src/app/modules/batting-records/components/batting-overall/batting-overall.component.html
@@ -87,7 +87,7 @@
       </a>
     </th>
     <th class="text-right">
-      <a (click)="sort(importedSortOrder.battingImpact)" class="btn btn-link">BI
+      <a (click)="sort(importedSortOrder.battingImpact)" class="me-1 btn btn-link" cTooltip="Batting Impact" cTooltipPlacement="top" >BI
         <fa-icon *ngIf="importedSortOrder.battingImpact == sortOrder"
                  [icon]="getSortClass(importedSortOrder.battingImpact)"></fa-icon>
       </a>
