--- a/AcsStatsWeb/ClientApp/src/app/modules/batting-records/components/by-season/by-season.component.html
+++ b/AcsStatsWeb/ClientApp/src/app/modules/batting-records/components/by-season/by-season.component.html
@@ -91,7 +91,7 @@
       </a>
     </th>
     <th class="text-right">
-      <a (click)="sort(importedSortOrder.battingImpact)" class="btn btn-link">BI
+      <a (click)="sort(importedSortOrder.battingImpact)" class="me-1 btn btn-link" cTooltip="Batting Impact" cTooltipPlacement="top" >BI
         <fa-icon *ngIf="importedSortOrder.battingImpact == sortOrder"
                  [icon]="getSortClass(importedSortOrder.battingImpact)"></fa-icon>
       </a>
@@ -107,7 +107,10 @@
   <tbody>
   <tr *ngFor="let row of (battingBySeason$ | async)?.sqlResults?.data">
     <td class="text-left" nowrap="nowrap">{{row.name}}</td>
-    <td class="text-left" nowrap="nowrap">{{row.team}}</td>
+    <td class="text-left" nowrap="nowrap">
+          <span class="text-left ellipsed-cell me-1" [cPopoverTrigger]="'hover'" cPopover="{{row.team}}"
+                cPopoverPlacement="top">{{row.team}}</span>
+    </td>
     <td class="text-right" nowrap="nowrap">{{row.matches}}</td>
     <td class="text-right" nowrap="nowrap">{{row.innings == null ? "-" : row.innings}}</td>
     <td class="text-right" nowrap="nowrap">{{row.notOuts}}</td>
