--- a/AcsStatsWeb/ClientApp/src/app/modules/bowling-records/components/bowling-overall/bowling-overall.component.html
+++ b/AcsStatsWeb/ClientApp/src/app/modules/bowling-records/components/bowling-overall/bowling-overall.component.html
@@ -79,7 +79,7 @@
         <fa-icon *ngIf="importedSortOrder.sixes == sortOrder" [icon]="getSortClass(importedSortOrder.sixes)"></fa-icon></a>
     </th>
     <th class="text-right">
-      <a (click)="sort(importedSortOrder.battingImpact)" class="btn btn-link">BI
+      <a (click)="sort(importedSortOrder.battingImpact)" class="me-1 btn btn-link" cTooltip="Bowling Impact" cTooltipPlacement="top" >BI
         <fa-icon *ngIf="importedSortOrder.battingImpact == sortOrder"
                  [icon]="getSortClass(importedSortOrder.battingImpact)"></fa-icon>
       </a>
@@ -89,7 +89,10 @@
   <tbody>
   <tr *ngFor="let row of (bowlingOverall$ | async)?.sqlResults?.data">
     <td class="text-left" nowrap="nowrap">{{row.name}}</td>
-    <td class="text-left" nowrap="nowrap">{{row.team}}</td>
+    <td class="text-left" nowrap="nowrap">
+          <span class="text-left ellipsed-cell me-1" [cPopoverTrigger]="'hover'" cPopover="{{row.team}}"
+                cPopoverPlacement="top">{{row.team}}</span>
+    </td>
     <td class="text-right" nowrap="nowrap">{{row.matches}}</td>
     <td class="text-right" nowrap="nowrap">{{row.innings == null ? "-" : row.innings}}</td>
     <td class="text-right" nowrap="nowrap">{{row.balls}}</td>
