--- a/AcsStatsWeb/ClientApp/src/app/modules/shared/components/paging/paging.component.html
+++ b/AcsStatsWeb/ClientApp/src/app/modules/shared/components/paging/paging.component.html
@@ -1,19 +1,19 @@
-<div class="page-container">
+<nav class="page-container">
   <div>Page {{currentPage}} of {{totalPages}}</div>
   <div>Showing {{currentFirstItem}} to {{currentLastItem}} of {{totalItems}}</div>
   <!-- disable if on first row -->
-  <div class="clickable button button-left" (click)="clickFirst()"><fa-icon [icon]="faAnglesLeft"></fa-icon> First</div>
-  <div class="clickable button button-left" (click)="clickPrevious()"><fa-icon [icon]="faAngleLeft"></fa-icon> Previous</div>
+  <div class="clickable button button-left" (click)="clickFirst()" aria-label="first"><fa-icon [icon]="faAnglesLeft"></fa-icon> First</div>
+  <div class="clickable button button-left" (click)="clickPrevious()" aria-label="previous"><fa-icon [icon]="faAngleLeft"></fa-icon> Previous</div>
   <!-- disable if on last row -->
   <!-- <span style="border: 1px solid silver; border-radius: 0.25em; padding: 0.5em;"><i class="fas fa-arrow-left fa-fw" title="Back"></i></span>
    -->
-  <div class="clickable button button-right" (click)="clickNext()">Next <span><fa-icon [icon]="faAngleRight"></fa-icon></span> </div>
+  <div class="clickable button button-right" (click)="clickNext()" aria-label="previous">Next <span><fa-icon [icon]="faAngleRight"></fa-icon></span> </div>
   <!-- disable if on last row -->
-  <div class="clickable button button-right" (click)="clickLast()">Last <fa-icon [icon]="faAnglesRight"></fa-icon></div>
+  <div class="clickable button button-right" (click)="clickLast()" aria-label="last">Last <fa-icon [icon]="faAnglesRight"></fa-icon></div>
   <div class="clickable button "><span (click)="clickGoto()">Go to page: </span><input type="text"  id="gotoPageNumber"
                                                                                name="gotoPageNumber"
                                                                                [(ngModel)]="gotoPageNumber" ></div>
-</div>
+</nav>
 
 
 
