--- a/AcsStatsWeb/ClientApp/src/styles.css
+++ b/AcsStatsWeb/ClientApp/src/styles.css
@@ -457,10 +457,11 @@ section.searchResultHeader span {
   min-width: 1.5rem
 }
 
-.maxWidth20 {
-  max-width: 20rem;
+.ellipsed-cell {
+  max-width: 10rem;
   text-overflow: ellipsis;
   overflow: hidden;
+  display: inline-block
 }
 
 .selectrow {
